# vllm-setup

./: .gitignore  CLAUDE.md  README.md  check_flashinfer_availability.sh  check_pytorch_availability.sh  check_uva_detailed.py  check_vllm.py  install-systems-deps.sh  install_cuda128_flashinfer.sh  install_cuda_auto.sh  move_to_wsl.sh  pyproject.toml  query_qwen3vl.py  reset_env.sh  start_server.sh  sync.sh  test_math.py  test_vllm.py  uninstall_cuda_toolkit.sh  vllm_image_cli.py  vllm_server.py
