[project]
name = "vllm-setup"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "vllm>=0.11.0",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }